<resources>
    <string name="app_name">ETF Student Testing</string>
    <string name="email_address_hint">email address</string>
    <string name="password_hint">password</string>
    <string name="remember_account_text">Zapamti nalog</string>
    <string name="login">Prijavi se</string>
    <string name="logout">Odjavi se</string>
    <string name="yes">DA</string>
    <string name="no">NE</string>
    <string name="login_failed_message">Logovanje nije uspesno</string>
    <string name="logging_out_message">Brisanje podataka…</string>
    <string name="logout_failed_message">Brisanje podataka nije uspelo</string>
    <string name="user_info_progress_dialog">Prikupljanje podataka…</string>
    <string name="login_progress_dialog">Logovanje u toku…</string>
    <string name="register_progress_dialog">Registracija u toku…</string>
    <string name="user_data_failed_message">Dohvatanje podataka nije uspelo</string>
    <string name="user_info_name">Ime:</string>
    <string name="user_info_last_name">Prezime:</string>
    <string name="user_info_type">Tip korisnika:</string>
    <string name="user_info_email">Email:</string>
    <string name="invalid_qr_code_message">QR kod nije ispravan</string>
    <string name="course_message">Sifra kursa:</string>
    <string name="classroom_message">Sala:</string>
    <string name="test_name_message">Naziv testa:</string>
    <string name="test_date_and_time_message">Datum i vreme odrzavanja:</string>
    <string name="test_date_message">Datum:</string>
    <string name="check_in_progress_dialog">Prijavljivanje na cas u toku…</string>
    <string name="check_in_failed_message">Prijavljivanje na cas nije uspesno</string>
    <string name="unsubscribe_all_message">Ukloni sve aktivne prijave</string>
    <string name="unsubscribing_message">Uklanjanje aktivnih prijava…</string>
    <string name="unsubscribing_failed_message">Uklanjanje aktivnih prijava nije uspelo</string>
    <string name="active_themes_empty_list_message">Lista sacuvanih aktivnih prijava je prazna</string>
    <string name="questions_empty_list_message">Lista pitanja je prazna</string>
    <string name="questions_answer_list_message">Lista ponudjenih odgovora je prazna</string>
    <string name="checked_in_message">Prijava uspesna</string>
    <string name="question_message">Pitanje:</string>
    <string name="question_type_message">Tip pitanja:</string>
    <string name="alert_dialog_logout_title">Izloguj se</string>
    <string name="alert_dialog_logout_message">Da li ste sigurni da zelite da se izlogujete iz aplikacije?</string>
    <string name="alert_dialog_unsubscribe_title">Ukloni sve aktivne prijave</string>
    <string name="alert_dialog_unsubscribe_message">Da li ste sigurni da zelite da uklonite aktivne prijave za testove?</string>
    <string name="alert_dialog_unsubscribe_single_title">Ukloni ovu aktivnu prijavu</string>
    <string name="alert_dialog_unsubscribe_single_message">Da li ste sigurni da zelite da uklonite aktivnu prijavu za ovaj test?</string>
    <string name="alert_dialog_send_answer_title">Posalji odgovor</string>
    <string name="alert_dialog_send_answer_message">Da li ste sigurni da zelite da posaljete ovaj odgovor?</string>
    <string name="alert_dialog_delete_question_title">Obrisi pitanje</string>
    <string name="alert_dialog_delete_question_message">Da li ste sigurni da zelite da obrisete ovo pitanje?</string>
    <string name="answer_hint">Odgovor</string>
    <string name="send_answer_message">Posalji odgovor</string>
    <string name="sending_answer_progress_dialog">Slanje odgovora…</string>
    <string name="sending_answer_failed_message">Slanje odgovora nije uspelo</string>
    <string name="sending_answer_succ_message">Slanje odgovora uspesno</string>
    <string name="deleting_question_message">Brisanje pitanja u toku…</string>
    <string name="delete_question_failed">Brisanje pitanja nije uspelo</string>
</resources>
