<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_centerInParent="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/shape_transparent_radius_8dp"
        android:padding="30dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_login_input"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:theme="@style/editTextStyle"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/email"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_login_input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:theme="@style/editTextStyle"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/remember_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignEnd="@+id/password"
            android:layout_marginBottom="30dp"
            android:theme="@style/checkBoxStyle"
            android:text="@string/remember_account_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/remember_account"
            android:background="@drawable/shape_primary_radius_2dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>
