<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparentPanelColor">

    <com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/qr_code_scanner"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/class_info_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/checked_in_message"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/succ_green"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/course_message"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="5dp"
                android:background="@drawable/shape_transparent_with_border"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="13E111P1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/classroom_message"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/classroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="5dp"
                android:background="@drawable/shape_transparent_with_border"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="56" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/test_name_message"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/test_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="5dp"
                android:background="@drawable/shape_transparent_with_border"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="Kes memorija" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/test_date_and_time_message"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="5dp"
                android:background="@drawable/shape_transparent_with_border"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="16.08.2018. 12:30" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>